--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,20 @@
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+nav button {
+  padding: 8px;
+}
+
 #content {
   display: flex;
   flex-direction: column;
